--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
     <meta charset="UTF-8">
     <title>$Beautiful Data$</title>
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="Styles/main-style.css">
 
 </head>
-<body>
-<div>
-    <p>Hello World!</p>
+<body class="w-100">
+<div class="container col-md-11 mt-4 h-100">
+    <div class="row">
+        <div class="col-md-7" id="map">map</div>
+        <div class="col-md-5" id="gender-chart">gender</div>
+    </div>
+    <div class="row">
+        <div class="col-md-7" id="ethnicity-chart">ethnicity</div>
+        <!--<div class="col-md-5" id="gender-chart"></div>-->
+    </div>
+
+
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
