Map with total numberof enrollment works.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body class="w-100">
 <div class="container col-md-11 mt-4 h-100">
-    <div class="row">
-        <div class="col-md-7" id="map">map</div>
-        <div class="col-md-5" id="gender-chart">gender</div>
+    <div class="row justify-content-center">
+        <div class="col-md-7 text-center" id="map">
+            <h4>Total University Enrollment by State in 2017</h4>
+        </div>
+        <div class="col-md-5 text-center" id="gender-chart">
+            <h4 id="gender-title">Enrollment Distribution by Gender in USA</h4>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-7" id="ethnicity-chart">ethnicity</div>
@@ -27,6 +31,8 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="https://d3js.org/d3.v3.js"></script>
+<script src="http://d3js.org/queue.v1.min.js"></script>
+<script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="Scripts/main.js"></script>
 </body>
 </html>
