Ethnicity graph is scaled correctly.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-7" id="ethnicity-chart">ethnicity</div>
+        <div class="col-md-7 powderblue">
+            <h4 id="gender-title" class="text-center">Enrollment Distribution by Ethnicity in USA</h4>
+            <div className="w-100" id="ethnicity-chart"></div>
+        </div>
         <!--<div class="col-md-5" id="gender-chart"></div>-->
     </div>
 
