--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             <h4 id="gender-title" class="mb-4 mt-2">Enrollment Distribution by Gender in USA</h4>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-7 powderblue">
-            <h4 id="gender-title" class="text-center">Enrollment Distribution by Ethnicity in USA</h4>
+    <div class="row justify-content-center">
+        <div class="col-md-6 mr-4 rounded border mt-4" style="background-color: #edf8ff;">
+            <h4 id="ethnicity-title" class="text-center">Enrollment Distribution by Ethnicity in USA</h4>
             <div className="w-100" id="ethnicity-chart"></div>
         </div>
+        <div class="col-md-5">Linecharrt?? :D</div>
         <!--<div class="col-md-5" id="gender-chart"></div>-->
     </div>
 
