--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
 <body class="w-100">
 <div class="container col-md-11 mt-4 h-100">
     <div class="row justify-content-center">
-        <div class="col-md-6 text-center rounded border mr-4" id="map">
+        <div class="col-md-6 text-center rounded border mr-4" id="map-div">
             <h4 class=" mt-2">Total University Enrollment by State in 2017</h4>
+            <div id="map"></div>
+            <div class="form-check col-md-4 right bg-dark rounded text-white text-right">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="" id="aggregate-toggle" onchange="aggregateChange();">Multiple State Selection
+                </label>
+            </div>
         </div>
-        <div class="col-md-5 text-center rounded border" id="gender-chart">
+        <div class="col-md-5 text-center rounded border" id="gender-chart-div">
             <h4 id="gender-title" class="mb-4 mt-2">Enrollment Distribution by Gender in USA</h4>
+            <div className="w-100" id="gender-chart"></div>
         </div>
     </div>
     <div class="row justify-content-center">
