--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 <script src="https://d3js.org/d3.v3.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.js"></script>-->
 <!--<script src="https://d3js.org/d3.v4.min.js"></script>-->
-<script src="http://d3js.org/queue.v1.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="https://d3js.org/queue.v1.min.js"></script>
+<script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="Scripts/main.js"></script>
 </body>
 </html>
