--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <h4 id="ethnicity-title" class="text-center">Enrollment Distribution by Ethnicity in USA</h4>
             <div className="w-100" id="ethnicity-chart"></div>
         </div>
-        <div class="col-md-5">Linecharrt?? :D</div>
+        <div class="col-md-5 rounded border mt-4" style="background-color: #edf8ff">
+            <h4 id="stream-title" class="text-center"></h4>
+            <div className="w-100" id="stream-chart"></div>
+        </div>
+
         <!--<div class="col-md-5" id="gender-chart"></div>-->
     </div>
 
